# serail-Assistant

./: README.md
SerialAssistant/: CMakeLists.txt
SerialAssistant/Resources/: serial.qrc
SerialAssistant/src/: main.cpp  serialAssistant.cpp  serialAssistant.h  serialAssistant.ui  serialcharts.cpp  serialcharts.h  serialcharts.ui
